for adding editor page

--- a/flask/Coding/templates/base.html
+++ b/flask/Coding/templates/base.html
@@ -43,7 +43,7 @@
     }
     @media (min-width: 800px) and (max-width: 850px) {
               .navbar:not(.top-nav-collapse) {
-                  background: #1C2331!important;
+                  background: #3968c7!important;
               }
           }
   </style>
@@ -116,6 +116,7 @@
 
     </div>
   </nav>
+  
   <!-- Navbar -->
   {% block main %}
   {% endblock %}  
