--- a/flask/Coding/templates/create.html
+++ b/flask/Coding/templates/create.html
@@ -82,7 +82,7 @@
                                         <p class="text-muted">
                                            
                                             
-                                            <input type="radio" name="os" id="centos" value="centos">
+                                            <input type="radio" name="os" id="centos" value="centos11111111111">
                                             <label for="centos">CentOS</label>
                                             <input type="radio" name="os" id="ubuntu" value="ubuntu" checked="true">
                                             <label for="ubuntu">Ubuntu</label>
